--- a/core/templates/event_base.html
+++ b/core/templates/event_base.html
@@ -41,7 +41,7 @@
 	<div id="main">
 		<div id="header">
 					<div id ="f">
-					<div id="jclink"><a href="http://www.johnchow.com"><img src="{% url static 'images/jclink.png' %}"></a></div>	
+					<div id="jclink"></div>	
 
 				<div id="links"><a href="#">Get CollectiveVIP</a> &nbsp;&nbsp; <a href="#">How it Works</a> &nbsp;&nbsp; <a href="#">Contact</a></div>
     <!-- Header Content -->
