fixing overlay pageflow

--- a/core/templates/blogvip_flow.html
+++ b/core/templates/blogvip_flow.html
@@ -34,7 +34,7 @@
 
 	<div id="overlay-div-content1">
 		<div class="overlay-top">
-			<img src="{% url static 'images/sharetxt.png' %}">
+			<img src="{% url static 'images/step1-msg.png' %}">
 		</div>
 		
 		<div id="pick-msg">To get your discount share John's offer with your friends on Facebook or Twitter, choose one:</div>
@@ -77,7 +77,7 @@
 
 	<div id="overlay-div-content2-facebook" >
 		<div class="overlay-top">
-			<img src="{% url static 'images/sharetxt.png' %} ">
+			<img src="{% url static 'images/step2-msg.png' %} ">
 		</div>
 		<div class="overlay-bot">
 			<div id="previous" class="previous"><img src="{% url static 'images/previous.png' %}"></div>
@@ -97,7 +97,7 @@
 	
 	<div id="overlay-div-content2-twitter">
 		<div class="overlay-top">
-			<img src="{% url static 'images/sharetxt.png' %}">  
+			<img src="{% url static 'images/step2-msg.png' %}">  
 		</div>
 		<div class="overlay-bot">
 			<div id="previous" class="previous"><img src="{% url static 'images/previous.png' %}"></div>
@@ -111,7 +111,7 @@
 	</div>
 	<div id="overlay-div-content3" >
 
-		<div class="overlay-top"><img src="{% url static 'images/sharetxt.png' %}">  
+		<div class="overlay-top"><img src="{% url static 'images/step3-msg.png' %}">  
 
 		</div>
 		<div class="overlay-bot">
