--- a/core/templates/blogvip_flow.html
+++ b/core/templates/blogvip_flow.html
@@ -291,8 +291,10 @@ $(document).ready(function() {
 				dataType: "json",
 				data: {},
 				success: function(data){
+					//alert("REQUEST DONE", data);
 				},
 				beforeSend: function() {
+					//alert("sending feed request");
 				}
 			});
 		});
@@ -321,7 +323,7 @@ $(document).ready(function() {
 				url: '{% url event_tweet_invite event_id=event.id %}', 
 				dataType: "json",
 				data: {message: $("#overlay-textarea-twitter").val(), 
-				shash: "{{shash}}",
+				shash: "{{hash}}",
 			}, 
 			success: function(data){
 				$.get('{% url event_going event_id=event.id %}', function(data) {
@@ -515,7 +517,11 @@ $("#overlay-textarea-twitter").charCount();
 			allowed: 80,		
 			warning: 20,
 		});
-
+$("#overlay-textarea-facebook").charCount();
+		({
+			allowed: 80,		
+			warning: 20,
+		});
 </script>
 <!-- Content ends here -->
 {% endblock %}
