Adding dicount and percent. Moving fauth urls to fauth.

--- a/core/templates/create.html
+++ b/core/templates/create.html
@@ -20,7 +20,6 @@
 
 {% endblock %} 
 
-
 {% block title %}Create{% endblock %}
 
 {% block content %}
@@ -97,6 +96,17 @@
 		<div class="image_preview"><br/><br/><br/><br/>Image Preview</div></p>
 	</li>
     <input type="hidden" value="" name="event_image" id="event_image"></input>
+
+
+    <li>
+		<label for="event_venue">Discount Code: 
+		</label> <input type="text" value="AJD724X" name="code" />
+	</li>
+    <li>
+		<label for="event_venue">Percent Discount: 
+		</label> <input type="text" value="50" name="percent" />
+	</li>
+
 
     
 	<li>
