Fixing up some stuff.

--- a/core/templates/blogvip_flow.html
+++ b/core/templates/blogvip_flow.html
@@ -5,8 +5,8 @@
 <script type="text/javascript" src="{% url static 'javascript/jquery.cookie.js' %}" ></script>
 <script type="text/javascript" src="{% url static 'javascript/charCount.js' %}" ></script>
 <link rel="stylesheet" href="{% url static 'css/overlay.css' %}" type="text/css" >
-{% endblock %}
 
+{% endblock %}
 
 {% block title  %}
 {{event.name}}
@@ -19,8 +19,13 @@
 
 
 <div id="greeting">
-	John's offer to you and your friends:
+  {% if event.from_name %}
+	{{event.from_name}}'s offer to you and your friends:
+  {% else %}
+        Offer to you and your friends:
+  {% endif %}
 	<div id="status"></div>
+
 </div>
 
 
@@ -29,7 +34,13 @@
 </div>
 
 
-<div id="invitemsg">20% OFF ADMISSION TO BLOG WORLD</div>
+<div id="invitemsg">
+  {% if event.percent %}
+       {{event.percent}}% OFF ADMISSION TO  {{ event.name|upper }}
+  {% else %}
+       DISCOUNT ADMISSION TO {{ event.name|upper }}
+  {% endif %}
+</div>
 
 <div id="overlay-blogger-login" class="overlay-blogger">
 
@@ -38,7 +49,7 @@
 			<img src="{% url static 'images/step1-msg.png' %}">
 		</div>
 		
-		<div id="pick-msg">To get your discount share John's offer with your friends on Facebook or Twitter, choose one:</div>
+		<div id="pick-msg">To get your discount share {{event.from_name}}'s offer with your friends on Facebook or Twitter, choose one:</div>
 		<div class="overlay-bot">
 			<div id="previous-grey"><img src="{% url static 'images/previous-grey.png' %}"></div>
 			<div id="invite-progress"><img src="{% url static 'images/step1.png' %}"></div>
@@ -108,7 +119,7 @@
 		<div id="twitter-top-msg">
 			<img src="{% url static 'images/twitter-share-msg.png' %}">
 		</div>
-		<textarea id="overlay-textarea-twitter" >Join me at BlogWorld in Las Vegas, Oct 14-16. Use my 20% off coupon.</textarea>
+		<textarea id="overlay-textarea-twitter" >Join me at {{event.name}} in {{event.address}}, Oct 14-16. Use my {{event.percent}}% off coupon.</textarea>
 	</div>
 	<div id="overlay-div-content3" >
 
@@ -128,7 +139,7 @@
 			Here’s your discount code:
 			</div>      	
 			
-			<div id="code"><p>JOHNCHOW1</p></div>
+			<div id="code"><p>{{event.code}}</p></div>
 
 	</div>
 
@@ -152,7 +163,7 @@
 	</div>
 	<div id="detsfooter"></div>
 </div> 
-<div id="eventinfo"><b>Exhibits:</b> Oct 15-16 | <b>Conference:</b> Oct 14-16<br>Mandalay Bay Convention Center | Las Vegas, Nevada</div>
+<div id="eventinfo"><b>Exhibits:</b> Oct 15-16 | <b>Conference:</b> Oct 14-16<br>{{event.venue}} | {{event.venue_address}}</div>
 <div id="attendees">
 	<div id="msg">Interested Guests</div>
 
