--- a/core/templates/create.html
+++ b/core/templates/create.html
@@ -32,7 +32,7 @@
   <ul>
     <li>
 		<label for="event_name">Event Name: </label> 
-		<input type="text" name="event_name" id="event_name" value="PyCon 2010" class="required" />
+		<input type="text" name="event_name" id="event_name" value="BLOG WORLD 2010" class="required" />
 	</li>
 	
     <li>
@@ -58,7 +58,7 @@
 	
     <li>
 		<label for="event_venue">Event Venue: 
-		</label> <input type="text" value="Marriot Hotel" name="event_venue" />
+		</label> <input type="text" value="Mandalay Bay Convention Center" name="event_venue" />
 	</li>
 	
     <li>
@@ -67,7 +67,7 @@
 		<input type="hidden" value="-97.7430608" name="event_lng" id="event_lng"></input>                
 
 
-		<textarea rows="2" cols="30" name="event_address" id="event_address">Austin, Tx</textarea>
+		<textarea rows="2" cols="30" name="event_address" id="event_address">Las Vegas, Nevada</textarea>
 
 		<div id="address_map"></div>
 	</li>
@@ -99,11 +99,15 @@
 
 
     <li>
-		<label for="event_venue">Discount Code: 
-		</label> <input type="text" value="AJD724X" name="code" />
+		<label for="from_name">From Name: 
+		</label> <input type="text" value="John" name="from_name" />
 	</li>
     <li>
-		<label for="event_venue">Percent Discount: 
+		<label for="code">Discount Code: 
+		</label> <input type="text" value="JOHNCHOW1" name="code" />
+	</li>
+    <li>
+		<label for="percent">Percent Discount: 
 		</label> <input type="text" value="50" name="percent" />
 	</li>
 
