user logo, movin around some css

--- a/core/templates/blogvip_flow.html
+++ b/core/templates/blogvip_flow.html
@@ -17,6 +17,7 @@
 <!-- Content starts here -->
 
 
+<div id="user-logo"><img src="{% url static 'images/jclink.png' %}"></div>	
 
 <div id="greeting">
 	John's offer to you and your friends:
