Subdomains are now parametrised.

--- a/core/templates/create.html
+++ b/core/templates/create.html
@@ -110,7 +110,10 @@
 		<label for="percent">Percent Discount: 
 		</label> <input type="text" value="50" name="percent" />
 	</li>
-
+    <li>
+		<label for="subdomain">Subdomain: 
+		</label> <input type="text" value="www" name="subdomain" />
+	</li>
 
     
 	<li>
