--- a/core/templates/thanks.html
+++ b/core/templates/thanks.html
@@ -6,7 +6,7 @@
 <p>Event Created, Thanks..</p>
 
 {% if event %}
-<a href={% url event_home event_id=event.id %}>{{ event.name }}</a> <br />
+<a href={% url event_blogvip_flow %}?event={{event.id}} >{{ event.name }}</a> <br />
 Event Id: {{ event.id }} <br />
 Description: {{event.description}} <br />
 Start Time: {{event.event_date_time_start}} <br />
