--- a/core/templates/list.html
+++ b/core/templates/list.html
@@ -10,7 +10,7 @@
     {% for event in events %}
     <hr />
         <li>
-	  <a href={% url event_home event_id=event.id %}>{{ event.name }}</a> <br />
+	  <a href={% url event_blogvip_flow %}?event={{event.id}}>{{ event.name }}</a> <br />
 	    Event Id: {{ event.id }} <br />
 	    Description: {{event.description}} <br />
 	    Start Time: {{event.event_date_time_start}} <br />
