--- a/core/templates/blogvip_flow.html
+++ b/core/templates/blogvip_flow.html
@@ -37,7 +37,7 @@
 </div>
 
 
-<div id="invitemsg">{{percent}}% OFF ADMISSION TO BLOG WORLD</div>
+<div id="invitemsg">{{event.percent}}% OFF ADMISSION TO BLOG WORLD</div>
 
 <div id="overlay-blogger-login" class="overlay-blogger">
 
