Fixing name john.

--- a/core/templates/blogvip_flow.html
+++ b/core/templates/blogvip_flow.html
@@ -27,7 +27,7 @@
 {% endif %}
 
 <div id="greeting">
-	John's offer to you and your friends:
+	{{event.from_name}}'s offer to you and your friends:
 	<div id="status"></div>
 </div>
 
