make share txt red

--- a/core/templates/blogvip_flow.html
+++ b/core/templates/blogvip_flow.html
@@ -33,7 +33,7 @@
 
 
 <div id="invite-button">
-	<a href="" id="invite_button" rel="#overlay-blogger-login">Share this to get your discount</a>
+	<a href="" id="invite_button" rel="#overlay-blogger-login" style="color: red;">Share this to get your discount</a>
 </div>
 
 
