Fixing up some stuff.

--- a/core/templates/create.html
+++ b/core/templates/create.html
@@ -117,7 +117,7 @@
 
     
 	<li>
-		<label for="person_email">Organizer Contact Email: </label> <input type="text" name="person_email" class="required email" value="{{user.email}}" />
+		<label for="person_email">Organizer Contact Email: </label> <input type="text" name="person_email" value="{{user.email}}" />
 	</li>
 
   </ul>
