--- a/static/css/2stylez.css
+++ b/static/css/2stylez.css
@@ -1,8 +1,8 @@
 /***** Sticky Footer *********/
 #wrap {min-height: 100%;}
 
-#main {
-	padding-bottom: 150px;}  /* must be same height as the footer */
+#main {overflow: auto;
+	padding-bottom: 300px;}  /* must be same height as the footer */
 
 #footer {position: relative;
 	margin-top: -150px; /* negative value of footer height */
